# BIAT-TestManager

./: ANALYSIS_AND_PLAN.md  Biat test manager notes .docx  Logbook-Week 3 and 4.docx  README.md
Backend/biat_testmanager/: .gitignore  README.md  docker-compose.selenoid.yml  main.py  pyproject.toml
Backend/biat_testmanager/.claude/: CLAUDE.md  ai-layer.md  architecture.md  commands.md  conventions.md  phases.md  settings.local.json
Backend/biat_testmanager/docs/: PLATFORM.md  backlog.md  frontend-plan.md  roadmap.md
Backend/biat_testmanager/docs/architecture/: 01-product-vision.md  02-three-layer-architecture.md  03-domain-model.md  04-rbac-and-multi-tenancy.md  05-execution-engine.md  06-storage-and-streaming.md  07-ai-layer.md  08-integrations.md  09-specs-and-rag.md  automation-current-state-and-roadmap.md  backend-current-state.md  backend-logic-recovery.md  integrations.md  platform-master-roadmap.md
Backend/biat_testmanager/infra/runners/java/: Dockerfile
Backend/biat_testmanager/infra/runners/python/: Dockerfile
Backend/biat_testmanager/infra/selenoid/: README.md  browsers.json
Backend/biat_testmanager/src/: manage.py
Backend/biat_testmanager/src/apps/accounts/: admin.py  backends.py  models.py  permissions.py  serializers.py  urls.py  views.py
Backend/biat_testmanager/src/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_role.py  0002_teammembership.py  0003_userprofile_org_role.py  (+6 more)
Backend/biat_testmanager/src/apps/ai/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
Backend/biat_testmanager/src/apps/automation/: admin.py  consumers.py  routing.py  runtime.py  tasks.py  urls.py
Backend/biat_testmanager/src/apps/integrations/: access.py  admin.py  serializers.py  urls.py  views.py
Backend/biat_testmanager/src/apps/projects/: access.py  admin.py  serializers.py  services.py  urls.py  views.py  views_tree.py
Backend/biat_testmanager/src/apps/specs/: admin.py  apps.py  urls.py
Backend/biat_testmanager/src/apps/testing/: admin.py  apps.py  urls.py
Backend/biat_testmanager/src/biat_testmanager/: __init__.py  asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
(+462 files in other folders)
