# pyproject.toml
[project]
name = "biat-testmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=4.2,<5.0",
    "djangorestframework>=3.14.0",
    "python-decouple>=3.8",
    "psycopg2-binary>=2.9.9",
    "django-cors-headers>=4.9.0",
    "djangorestframework-simplejwt>=5.5.1",
    "django-encrypted-model-fields>=0.6.5",
    "pillow>=12.1.1",
]
